scripts/nullness/annotator/url53f943c5cb_Praznat_AGP_tgz-pJ8-AMath_TestingJ8.txt
../annotator/url53f943c5cb_Praznat_AGP_tgz-pJ8-AMath_TestingJ8/src/War/CombatDefs.java:5: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url53f943c5cb_Praznat_AGP_tgz-pJ8-AMath_TestingJ8/src/War/CombatDefs.java:73: error: cannot find symbol
		@Initializer private SoldierType bow() {range = Range.MISSILE; edge = Edge.SHARP; return this;}
		 ^
  symbol:   class Initializer
  location: class SoldierType
Note: ../annotator/url53f943c5cb_Praznat_AGP_tgz-pJ8-AMath_TestingJ8/src/GUI/GUImain.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
